fix(segmented-button): fixed non-current buttons on dark mode (#2097)

--- a/src/less/segmented-buttons/segmented-buttons.less
+++ b/src/less/segmented-buttons/segmented-buttons.less
@@ -34,6 +34,7 @@
     background-color: transparent;
     border: none;
     border-radius: var(--btn-border-radius, calc(@button-height-regular / 2));
+    color: var(--color-foreground-on-primary);
     font-size: @font-size-regular;
     min-height: @button-height-regular - (@segmented-buttons-padding * 2);
     padding: @spacing-100 @spacing-200;
